--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,18 @@ buildscript {
   }
   repositories {
     mavenCentral()
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
   }
   dependencies {
     classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    classpath("net.ltgt.gradle:gradle-apt-plugin:0.7")
   }
 }
 
 apply plugin: 'java'
+apply plugin: 'net.ltgt.apt'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -35,6 +40,9 @@ idea {
 }
 
 dependencies {
+  apt "org.immutables:value:2.7.1"
+  compileOnly "org.immutables:value:2.7.1:annotations"
+
   implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
   implementation('org.springframework.boot:spring-boot-starter-web')
   runtimeOnly('org.springframework.boot:spring-boot-devtools')
